finish blue print

--- a/myweb/templates/login.html
+++ b/myweb/templates/login.html
@@ -58,7 +58,7 @@
   <div class="border-top pt-3">
     <small class="text-muted">
       Don't have an account yet?
-      <a class="ml-2" href="{{ url_for('signup') }}">Sign up</a>
+      <a class="ml-2" href="{{ url_for('users.signup') }}">Sign up</a>
     </small>
   </div>
 
