--- a/myweb/templates/base.html
+++ b/myweb/templates/base.html
@@ -21,10 +21,10 @@
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a  class="nav-link px-2 text-secondary" href="{{ url_for('home')}}">Home</a></li>
+          <li><a  class="nav-link px-2 text-secondary" href="{{ url_for('main.home')}}">Home</a></li>
           <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-          <li><a href="/account" class="nav-link px-2 text-white">Account</a></li>
-          <li><a href="{{ url_for('post') }}" class="nav-link px-2 text-white">Post</a></li>
+          <li><a href="{{ url_for('users.account') }}" class="nav-link px-2 text-white">Account</a></li>
+          <li><a href="{{ url_for('posts.post') }}" class="nav-link px-2 text-white">Post</a></li>
           <li><a href="/post/new" class="nav-link px-2 text-white">New</a></li>
         </ul>
 
@@ -34,11 +34,11 @@
 
         <div class="text-end">
           {% if current_user.is_authenticated: %}
-            <a href="{{ url_for('account')}}"><button type="button" class="btn btn-outline-light me-2">Account</button></a>
-            <a href="{{ url_for('logout')}}"><button type="button" class="btn btn-outline-light me-2">Logout</button></a>
+            <a href="{{ url_for('users.account')}}"><button type="button" class="btn btn-outline-light me-2">Account</button></a>
+            <a href="{{ url_for('users.logout')}}"><button type="button" class="btn btn-outline-light me-2">Logout</button></a>
           {% else%}
-            <a href="{{ url_for('login')}}"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
-            <a href="{{ url_for('signup')}}"><button type="button" class="btn btn-warning">Sign-up</button></a>
+            <a href="{{ url_for('users.login')}}"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
+            <a href="{{ url_for('users.signup')}}"><button type="button" class="btn btn-warning">Sign-up</button></a>
           {% endif%}
         </div>
       </div>
