--- a/myweb/templates/new_post.html
+++ b/myweb/templates/new_post.html
@@ -6,9 +6,10 @@
     <script src="../static/summernote/summernote-lite.js"></script>
 
 
-    <label class="form-control-label" for="title">Title</label>
-    <input id="title" name="title" class="form-control form-control-lg" required type="text">
-    
+    <form>
+        <label class="form-control-label" for="title">Title</label>
+        <input id="title" name="title" class="form-control form-control-lg" required type="text">
+    </form>
     <label class="form-control-label" >Content</label>
     <div id="summernote"></div>
 
@@ -18,8 +19,48 @@
 
   <script>
     $(document).ready(function() {
-        $('#summernote').summernote('code','<p>Hello</p>');
+
+        $('#summernote').summernote({
+            placeholder: 'Say something here~~',
+            height: 200,
+    
+            callbacks: {
+                onImageUpload: function(files) {
+                    imgurl=uploadImage(files[0]);
+                    imgname=files[0]['name'];
+            
+                    $('#summernote').summernote('insertImage', imgurl, imgname);
+
+                }
+            }
+        });
     });
+
+    function uploadImage(image) {
+
+        var formdata = new FormData();
+        formdata.append("image", image);
+
+        var path;
+        $.ajax({
+            url: '/saveimg',
+            cache: false,
+            contentType: false,
+            processData: false,
+            async : false,
+            data: formdata,
+            type: "post",
+            success: function(url) {
+                // console.log(url);
+                path=url;
+            },
+            error: function(data) {
+                console.log(data);
+            }
+        });
+        return path;
+    };
+
   </script>
 
   <script>
@@ -42,19 +83,13 @@
 
             const form = document.createElement('form');
             form.method = 'post';
-            form.action = '/post/new';
+            form.action = '/summer';
 
             const hiddeninput = document.createElement('input');
             hiddeninput.name='type';
             hiddeninput.type='hidden';
             hiddeninput.value=type;
             form.appendChild(hiddeninput);
-
-            const hiddentitle = document.createElement('input');
-            hiddentitle.name='title';
-            hiddentitle.type='hidden';
-            hiddentitle.value=$('#title').val();
-            form.appendChild(hiddentitle);
 
             const hiddenField = document.createElement('textarea');
             hiddenField.name='content';
