--- a/myweb/templates/base.html
+++ b/myweb/templates/base.html
@@ -26,7 +26,7 @@
           <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
           <li><a href="{{ url_for('users.account') }}" class="nav-link px-2 text-white">Account</a></li>
           <li><a href="{{ url_for('posts.post') }}" class="nav-link px-2 text-white">Post</a></li>
-          <li><a href="/post/new" class="nav-link px-2 text-white">New</a></li>
+          <li><a href="{{url_for('posts.new_post') }}" class="nav-link px-2 text-white">New</a></li>
         </ul>
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
