add post edit page

--- a/myweb/templates/base.html
+++ b/myweb/templates/base.html
@@ -23,10 +23,10 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a  class="nav-link px-2 text-secondary" href="{{ url_for('main.home')}}">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+          <li><a href="/test" class="nav-link px-2 text-white">test</a></li>
           <li><a href="{{ url_for('users.account') }}" class="nav-link px-2 text-white">Account</a></li>
           <li><a href="{{ url_for('posts.post') }}" class="nav-link px-2 text-white">Post</a></li>
-          <li><a href="{{url_for('posts.new_post') }}" class="nav-link px-2 text-white">New</a></li>
+          <li><a href="{{url_for('posts.post_new') }}" class="nav-link px-2 text-white">New</a></li>
         </ul>
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
@@ -58,13 +58,14 @@
           {% endfor %}
         {% endif %}
       {% endwith %}
+
       
       {% block content%}       {% endblock content %}
     </div>
       
   </main>
 
-  {% block script %} {% endblock script %}
+
 
 
 </body>
