--- a/myweb/templates/index.html
+++ b/myweb/templates/index.html
@@ -11,7 +11,7 @@
                     <a class="mr-2" href="#">{{ post.author.username }}</a>
                     <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                 </div>
-                <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
+                <h2><a class="article-title" href="{{ url_for('posts.post_id', post_id=post.id) }}">{{ post.title }}</a></h2>
                 <p class="article-content mypost">{{ post.content }}</p>
             </div>
         </article>
@@ -23,12 +23,15 @@
 {% endif %}
 
 <!-- turn str into html -->
-<script>
-    post= $(".mypost");
-    str=post.text();
-    post.text('');
-    html=$.parseHTML( str )
-    post.append(html);
+<script> 
+    $(".mypost").each(function(index){
+
+        str=$(this).text()
+        $(this).text('');
+        html=$.parseHTML( str )
+        $(this).append(html);
+        
+    });
 </script>
 
 
