--- a/myweb/templates/errors/403.html
+++ b/myweb/templates/errors/403.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="content-section">
-        <h1>Oops. Page Not Found (403)</h1>
-        <p>That page does not exist. Please try a different location</p>
+        <h1>You don't have permission to do that (403)</h1>
+        <p>Please check your account and try again</p>
     </div>
 {% endblock content %}
