post tag finish

--- a/myweb/templates/posts/mypost.html
+++ b/myweb/templates/posts/mypost.html
@@ -1,7 +1,7 @@
 {% extends "base.html"%}
 {% block content%}
 
-<h2>Posts</h2>
+<h2>My Posts</h2>
 <hr>
 {% if posts %}
     {% for post in posts %}
@@ -23,7 +23,7 @@
     <h1>add some post</h1>
 {% endif %}
 
-<h2>Drafts</h2>
+<h2>My Drafts</h2>
 <hr>
 
 {% if drafts %}
