--- a/myweb/templates/posts/editor.html
+++ b/myweb/templates/posts/editor.html
@@ -35,14 +35,27 @@
     </div>
 
     <div class="form-group">
+
         {{ form.save(class="btn btn-outline-info")}}
         
-        {% if post_type=="draft" %}
+        {% if post_type=="draft"  or post_type=="new" %}
             {{ form.post(class="btn btn-outline-info")}}
         {% endif %}
     </div>
+    <div  class="form-group"id="tag-group">
+        {{ form.tags(class="form-control form-control-lg",id="tagform")}}
+        
+    </div>
   
 </form>
+
+<!-- <div id="tag-group" >
+    <div id="tag"></div>
+</div>
+
+<div id="hintlist" style="display: none;">{{tags}}</div>
+ -->
+
 
 
 
@@ -51,6 +64,7 @@
 
 <script>
     $(document).ready(function() {
+        const hintlist=$('#hintlist').text().split(',');
 
         $('#summernote').summernote({
             placeholder: 'Say something here~~',
@@ -64,6 +78,28 @@
                 }
             }
         });
+
+        $('#tag').summernote({
+            height: 100,
+            toolbar: false,
+            // hint: {
+            //     mentions: hintlist,
+            //     match: /\B#(\w*)$/,
+            //     search: function (keyword, callback) {
+            //         callback($.grep(this.mentions, function (item) {
+            //             return item.indexOf(keyword) == 0;
+            //         }));
+            //     },
+            //     content: function (item) {
+            //         $('#tagform').val(function(i,v){
+            //             return v+'#'+item+' '
+            //         });                    
+            //         return '#'+item;
+            //     }    
+            // }
+        });
+
+        $('#tag-group .note-statusbar').hide();
     });
 
 </script>
