--- a/myweb/templates/posts/post_id.html
+++ b/myweb/templates/posts/post_id.html
@@ -11,27 +11,21 @@
             <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
             <a class="mr-2" href="#">{{ post.author.username }}</a>
         </div>
-        <p  class="article-content mypost">{{ post.content }}</p>
+
+        <div class="d-grid gap-2 d-md-block">
+            {% for tag in post.tag_rel%}
+            <a class="btn btn-secondary btn-sm" href="{{url_for('posts.search',tag=tag.tag_type)}}" type="button">{{ tag.tag_type}}</a>
+            {% endfor %}
+        </div>
+        <p  class="article-content">{{ post.content|safe}}</p>
  
     </article>
 
 
 
 {% else %}
-    <h1>add some post</h1>
+    <h1>Post do not exist</h1>
 {% endif %}
-
-<!-- turn str into html -->
-<script>
-    post= $(".mypost");
-    str=post.text();
-    post.text('');
-    html=$.parseHTML( str )
-    post.append(html);
-</script>
-
-
-
 
 
 {% endblock content%}
